apps/default/grafana-alloy/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alloy
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/description: Grafana Alloy (OpenTelemetry Collector) for logs, metrics, and traces
    gethomepage.dev/group: Monitoring
    gethomepage.dev/icon: alloy
    gethomepage.dev/name: Grafana Alloy
spec:
  rules:
    - host: alloy.$(DNS) # DNS will be replaced by kustomize
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: alloy
                port:
                  number: 12345
